refactor tag module
重構 Tag 模組